2002-07-11  Darin Adler  <darin@apple.com>

        * WebView.subproj/IFWebViewPrivate.mm:
        (+[IFWebView _viewTypes]): Changed back to a mutable dictionary. Oops.

2002-07-11  John Sullivan   <sullivan@apple.com>

	- fixed 2980779 -- no scroll bar in history window

        * WebKit.pbproj/project.pbxproj: Removed nonexistent .h file from project list (IFGrabBag.h)

        * WebView.subproj/IFDynamicScrollBarsView.h: Renamed field allowsScrolling to disallowsScrolling
        * WebView.subproj/IFDynamicScrollBarsView.m:
        (-[IFDynamicScrollBarsView updateScrollers]):
        (-[IFDynamicScrollBarsView setAllowsScrolling:]):
        (-[IFDynamicScrollBarsView allowsScrolling]):
	Removed initWithFrame override, whose only purpose was to set allowsScrolling to the "default"	
	value (but not good enough for load-from-nib case). Changed all users of allowsScrolling to
	!disallowsScrolling instead.

2002-07-11  Chris Blumenberg  <cblu@apple.com>

        * Plugins.subproj/IFPluginNullEventSender.h:
        * Plugins.subproj/IFPluginNullEventSender.m:
        (-[IFPluginNullEventSender initWithPluginView:]): renamed, simplified
        (-[IFPluginNullEventSender stop]): call plugin debug function
        * Plugins.subproj/IFPluginView.h:
        * Plugins.subproj/IFPluginView.mm:
        (-[IFPluginView start]): call new initWithPluginView
        (-[IFPluginView windowWillClose:]): added back to fix plugin view leak
        (-[IFPluginView NPP_HandleEvent]): added

2002-07-11  Darin Adler  <darin@apple.com>

	- fixed 2930872 -- option-arrow keys should page up and down
	- fixed 2924727 -- Delete does not go to previous page

        * WebView.subproj/IFHTMLView.mm: Disable the keyDown and keyUp
	methods here. We don't really need to pass these events to KHTMLView
	at the moment. See the comment in this file for further explanation.
	This paves the way to handle keys other than arrow keys in IFWebView.
